# GB-DivRW

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
src/gbdivrw/: __init__.py  core.py
